--- a/Rocket.com/IdentityService/appsettings.json
+++ b/Rocket.com/IdentityService/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=IdentityServer.db;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=RocketDB;Uid=root;Pwd=root;"
   }
 }
