Changed to MSSQL, Made changes to IS4

--- a/Rocket.com/IdentityService/appsettings.json
+++ b/Rocket.com/IdentityService/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=RocketDB;Uid=root;Pwd=root;"
+    "DefaultConnection": "Server=localhost;Database=RocketDB;User Id=sa;Password=SQLDatabase123;"
   }
 }
