--- a/Rocket.com/APIGateway/APIGateway.csproj
+++ b/Rocket.com/APIGateway/APIGateway.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
     <PackageReference Include="Ocelot" Version="18.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
