--- a/Rocket.com/IdentityService/Properties/launchSettings.json
+++ b/Rocket.com/IdentityService/Properties/launchSettings.json
@@ -2,12 +2,18 @@
   "profiles": {
     "SelfHost": {
       "commandName": "Project",
-      "commandLineArgs": "/seed",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
