--- a/Rocket.com/IdentityService/appsettings.json
+++ b/Rocket.com/IdentityService/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=RocketDB;User Id=sa;Password=SQLDatabase123;"
+    "DefaultConnection": "Server=localhost;Database=IdentityDB;User Id=sa;Password=SQLDatabase123;"
   }
 }
