--- a/Rocket.com/FileUploadService/Properties/launchSettings.json
+++ b/Rocket.com/FileUploadService/Properties/launchSettings.json
@@ -1,14 +1,14 @@
 {
   "profiles": {
-    "SpaceshipService": {
+    "FileUploadService": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7097;http://localhost:5146",
-      "dotnetRunMessages": true
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7297;http://localhost:5297"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,25 +24,15 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
-    },
-    "WSL": {
-      "commandName": "WSL2",
-      "launchBrowser": true,
-      "launchUrl": "https://localhost:7097/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:7097;http://localhost:5146"
-      },
-      "distributionName": ""
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:22064",
-      "sslPort": 44332
+      "applicationUrl": "http://localhost:65065",
+      "sslPort": 44398
     }
   }
 }
