--- a/Rocket.com/FileUploadService/FileUploadService.csproj
+++ b/Rocket.com/FileUploadService/FileUploadService.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.5" />
-    <PackageReference Include="Microsoft.Identity.Web" Version="1.16.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="1.24.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Files\" />
   </ItemGroup>
 
 </Project>
